ingress/es-kibana-ingress.yaml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echomap
spec:
  backend:
    serviceName:
    servicePort: 80
  rules:
  - host: caas.one
    http:
      paths:
      - path: /kibana
        backend:
          serviceName: kibana
          servicePort: 5601
  - host: jingru.io
    http:
      paths:
      - path: /es
        backend:
          serviceName: elasticsearch
          servicePort: 9200
